[tool.poetry]
name = "tap-strava"
version = "0.2.0"
description = "Singer tap for the strava API"
authors = ["dluftspring <daniel.luftspring@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "tap_strava" },
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
singer-sdk = "^0.16.0"
requests = "^2.26.0"
singer = "^0.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
black = "^22.12.0"
pytest = "^7.2.0"
pandas = "^1.5.2"
click = "^8.1.3"
dictdiffer = "^0.9.0"
types-requests = "^2.28.11"
types-urllib3 = "^1.26.25"
types-jsonschema = "^4.17.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-strava = "tap_strava.tap:TapStrava.cli"
swagger-sync = "scripts.swagger_sync:main"